<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ProfileScreen">

    <View
        android:id="@+id/user_pic_container"
        style="@style/user_pic_container"
        android:background="@drawable/container_user_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_person"
        android:contentDescription="@string/imageDescription_personIcon_profileScreen"
        app:layout_constraintBottom_toBottomOf="@+id/user_pic_container"
        app:layout_constraintEnd_toEndOf="@+id/user_pic_container"
        app:layout_constraintStart_toStartOf="@+id/user_pic_container"
        app:layout_constraintTop_toTopOf="@+id/user_pic_container" />

    <ImageView
        android:id="@+id/icone_user_name"
        style="@style/icone_profile"
        android:contentDescription="@string/imageDescription_personIcon_profileScreen"
        android:src="@drawable/ic_person"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_pic_container" />

    <TextView
        android:id="@+id/text_user_name"
        style="@style/text_field_profile"
        android:layout_marginTop="97dp"
        app:layout_constraintStart_toEndOf="@+id/icone_user_name"
        app:layout_constraintTop_toBottomOf="@+id/user_pic_container" />

    <ImageView
        android:id="@+id/icone_user_email"
        style="@style/icone_profile"
        android:contentDescription="@string/imageDescription_mailIcon_profileScreen"
        android:src="@drawable/ic_email"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icone_user_name" />

    <TextView
        android:id="@+id/text_user_email"
        style="@style/text_field_profile"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toEndOf="@+id/icone_user_email"
        app:layout_constraintTop_toBottomOf="@+id/icone_user_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logOut"
        style="@style/logout_btn"
        android:text="@string/logOut_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_user_email" />

</androidx.constraintlayout.widget.ConstraintLayout>